--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ __pycache__/
 src/__pycache__/
 src/datamodel/__pycache__/
 src/util/__pycache__/
+src/__pycache__/main.cpython-39.pyc
+src/util/__pycache__/methods.cpython-39.pyc
