--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,6 @@
 data
 build/
 /test.log
-__pycache__
-src/__pycache__/
-src/datamodel/__pycache__/
-src/util/__pycache__/
-src/__pycache__/main.cpython-39.pyc
-src/util/__pycache__/methods.cpython-39.pyc
+__pycache__/
+*.pyc
+bfg.jar
